{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 17,
  "lineage": "6c8e3d18-85de-58d8-9d3e-4209abc53947",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "proxy_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.226.147.64",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-12-29T04:40:38.227-08:00",
            "id": "projects/diegonmarcos-infra-prod/regions/us-central1/addresses/arch-1-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "arch-1-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "diegonmarcos-infra-prod",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/regions/us-central1/addresses/arch-1-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/zones/us-central1-a/instances/arch-1"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_flask_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-08T13:45:18.192-08:00",
            "deny": [],
            "description": "Allow Flask API on port 5000",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/diegonmarcos-infra-prod/global/firewalls/allow-flask-api",
            "log_config": [],
            "name": "allow-flask-api",
            "network": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/global/networks/default",
            "priority": 1000,
            "project": "diegonmarcos-infra-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/global/firewalls/allow-flask-api",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-04T14:32:47.141-08:00",
            "deny": [],
            "description": "Allow HTTP traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/diegonmarcos-infra-prod/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/global/networks/default",
            "priority": 1000,
            "project": "diegonmarcos-infra-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-04T14:33:05.961-08:00",
            "deny": [],
            "description": "Allow HTTPS traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/diegonmarcos-infra-prod/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/global/networks/default",
            "priority": 1000,
            "project": "diegonmarcos-infra-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/global/firewalls/allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_mail_imaps",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "993"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-05T08:35:35.682-08:00",
            "deny": [],
            "description": "Allow IMAPS",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/diegonmarcos-infra-prod/global/firewalls/allow-mail-imaps",
            "log_config": [],
            "name": "allow-mail-imaps",
            "network": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/global/networks/default",
            "priority": 1000,
            "project": "diegonmarcos-infra-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/global/firewalls/allow-mail-imaps",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_mail_smtp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "25"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-05T08:35:17.462-08:00",
            "deny": [],
            "description": "Allow SMTP",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/diegonmarcos-infra-prod/global/firewalls/allow-mail-smtp",
            "log_config": [],
            "name": "allow-mail-smtp",
            "network": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/global/networks/default",
            "priority": 1000,
            "project": "diegonmarcos-infra-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/global/firewalls/allow-mail-smtp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_mail_smtps",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "465"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-18T12:42:04.164-07:00",
            "deny": [],
            "description": "Allow SMTPS (implicit TLS)",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/diegonmarcos-infra-prod/global/firewalls/allow-mail-smtps",
            "log_config": [],
            "name": "allow-mail-smtps",
            "network": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/global/networks/default",
            "priority": 1000,
            "project": "diegonmarcos-infra-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/global/firewalls/allow-mail-smtps",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_mail_submission",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "587"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-05T08:35:26.974-08:00",
            "deny": [],
            "description": "Allow SMTP Submission",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/diegonmarcos-infra-prod/global/firewalls/allow-mail-submission",
            "log_config": [],
            "name": "allow-mail-submission",
            "network": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/global/networks/default",
            "priority": 1000,
            "project": "diegonmarcos-infra-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/global/firewalls/allow-mail-submission",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_wireguard",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "51820"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-12-07T04:25:13.783-08:00",
            "deny": [],
            "description": "WireGuard from Oracle VM",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/diegonmarcos-infra-prod/global/firewalls/allow-wireguard",
            "log_config": [],
            "name": "allow-wireguard",
            "network": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/global/networks/default",
            "priority": 1000,
            "project": "diegonmarcos-infra-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/global/firewalls/allow-wireguard",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "ollama_gpu",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260210",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/zones/us-central1-a/disks/ollama-spot-gpu"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "guest_accelerator": [
              {
                "count": 1,
                "type": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/zones/us-central1-a/acceleratorTypes/nvidia-tesla-t4"
              }
            ],
            "id": "projects/diegonmarcos-infra-prod/zones/us-central1-a/instances/ollama-spot-gpu",
            "instance_id": "7836903609768416830",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-4",
            "metadata": {
              "ssh-keys": "diego:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCYrgsvw9+chEjLoQEtsnziOB9a6cHywD+yNS3iEmbAOKmq7jb75NyISu0K6y2+/oT7jgv2yy/7gsPlBCiYFWwTHp9Kunq2kLNFKoOtI1J/mVg0yW2SXV5MDQWMXFO5gRp5tmimnddgDjwtJJ8+/jFx5m5JhoKOa1NdmfSq6f0fJMHaqHytgOTUQ5psGk398TUneUYB3OGUWgGFzq4914gkYKnWwMMakaAfJNc3cyFt8MeXVttAqXz2eS3figO8IHRtils+ytw866iDBdPxUUyI7ezW/SXH907HfxvjAx2+YbBYgVAY4RiDQnNDJRViGQ8hswWjxZziObVCyrlt+ic4YrEdzfCchBvF7gMRRv6E2Q9hI2Dq4Ex74fi/xq4UNVUcsb2v4JFhT+rLer2s0zzkTuS0r+uIFcXztLZuI2uiNJi [...]
            },
            "metadata_fingerprint": "f6jA9V1m1xM=",
            "name": "ollama-spot-gpu",
            "network_interface": [
              {
                "access_config": [
                  {
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/global/networks/default",
                "network_ip": "10.128.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/regions/us-central1/subnetworks/default",
                "subnetwork_project": "diegonmarcos-infra-prod"
              }
            ],
            "project": "diegonmarcos-infra-prod",
            "scheduling": [
              {
                "automatic_restart": false,
                "instance_termination_action": "STOP",
                "min_node_cpus": 0,
                "on_host_maintenance": "TERMINATE",
                "preemptible": true,
                "provisioning_model": "SPOT"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/zones/us-central1-a/instances/ollama-spot-gpu",
            "service_account": [
              {
                "email": "514615763870-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "arch-1",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": false,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/fedora-cloud/global/images/fedora-cloud-42-20251120-0-x86-64",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 32,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/zones/us-central1-a/disks/arch-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "alias": "gcp-e2-f-0",
              "tier": "free"
            },
            "enable_display": false,
            "id": "projects/diegonmarcos-infra-prod/zones/us-central1-a/instances/arch-1",
            "instance_id": "4717450845302535476",
            "label_fingerprint": "Tupupt-Ijcs=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "diego:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCYrgsvw9+chEjLoQEtsnziOB9a6cHywD+yNS3iEmbAOKmq7jb75NyISu0K6y2+/oT7jgv2yy/7gsPlBCiYFWwTHp9Kunq2kLNFKoOtI1J/mVg0yW2SXV5MDQWMXFO5gRp5tmimnddgDjwtJJ8+/jFx5m5JhoKOa1NdmfSq6f0fJMHaqHytgOTUQ5psGk398TUneUYB3OGUWgGFzq4914gkYKnWwMMakaAfJNc3cyFt8MeXVttAqXz2eS3figO8IHRtils+ytw866iDBdPxUUyI7ezW/SXH907HfxvjAx2+YbBYgVAY4RiDQnNDJRViGQ8hswWjxZziObVCyrlt+ic4YrEdzfCchBvF7gMRRv6E2Q9hI2Dq4Ex74fi/xq4UNVUcsb2v4JFhT+rLer2s0zzkTuS0r+uIFcXztLZuI2uiNJi [...]
              "startup-script": "#!/bin/bash\n# Emergency swap creation - runs before Docker\nSWAPFILE=\"/swapfile\"\nif [ ! -f \"$SWAPFILE\" ] || [ $(stat -c%s \"$SWAPFILE\" 2\u003e/dev/null || echo 0) -lt 2000000000 ]; then\n  swapoff \"$SWAPFILE\" 2\u003e/dev/null || true\n  rm -f \"$SWAPFILE\"\n  dd if=/dev/zero of=\"$SWAPFILE\" bs=1M count=2048\n  chmod 600 \"$SWAPFILE\"\n  mkswap \"$SWAPFILE\"\nfi\nswapon -p 10 \"$SWAPFILE\" 2\u003e/dev/null || true\necho \"[startup] 2GB disk swap active\" [...]
            },
            "metadata_fingerprint": "NXFrAMyY2vs=",
            "name": "arch-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.226.147.64",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/global/networks/default",
                "network_ip": "10.128.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/regions/us-central1/subnetworks/default",
                "subnetwork_project": "diegonmarcos-infra-prod"
              }
            ],
            "project": "diegonmarcos-infra-prod",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/zones/us-central1-a/instances/arch-1",
            "service_account": [
              {
                "email": "514615763870-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/pubsub",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/trace.append"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "npm-admin"
            ],
            "tags_fingerprint": "4VaG_P2Dy_U=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_address.proxy_ip",
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "description": "Default network for the project",
            "enable_ula_internal_ipv6": false,
            "id": "projects/diegonmarcos-infra-prod/global/networks/default",
            "mtu": 0,
            "name": "default",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "7552312307873723857",
            "project": "diegonmarcos-infra-prod",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/diegonmarcos-infra-prod/global/networks/default"
          }
        }
      ]
    }
  ]
}